# modus

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: README.md  corpus-interface.md  mcp-host-integration.md  quickstart.md
docs/adr/: 0001-typed-action-vocabulary.md  0002-autonomous-loop-and-verifier-driven-search.md  0003-host-driven-loop-mcp-server-boundary.md  0004-tools-first-action-grammar.md  0005-recon-mode-scope-and-two-phase-autonomous-session.md  0006-engagement-coordinator-session-of-sessions.md  0007-multi-step-state-extraction.md  README.md
src/modus/: __init__.py  actions.py  agent.py  cli.py  consistency.py  corpus.py  cve_registry.py  evidence_patterns.py  executor.py  mining.py  mode.py  partition.py  proposer.py  recon.py  scope.py  server.py  session.py  source_review.py  token_extractor.py  tool_executor.py  tools.py
src/modus/builtins/: __init__.py  auth_wp.py  corpus.py  raw_http.py
src/modus/data/: wp_plugin_cves.json
tests/: __init__.py  test_actions.py  test_agent.py  test_auth_wp.py  test_builtins_corpus.py  test_cli.py  test_consistency.py  test_corpus.py  test_corpus_integration.py  test_cve_registry.py  test_evidence_patterns.py  test_mining.py  test_mode.py  test_partition.py  test_proposer.py  test_raw_http.py  test_recon.py  test_scope.py  test_server.py  test_smoke.py  test_source_review.py  test_token_extractor.py  test_tool_executor.py  test_tools.py  test_tools_integration.py
