[project]
name = "modus"
version = "0.4.0a1"
description = "Autonomous offensive agent with an open tool registry, formal consistency checking, and a Quarry-backed corpus."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Paul Beck" },
]
keywords = [
    "security",
    "offensive-security",
    "bug-bounty",
    "agent",
    "autonomous-agent",
    "llm",
    "mcp",
    "smt",
    "z3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.7,<3",
    "z3-solver>=4.13,<5",
    "anthropic>=0.40,<1",
    "openai>=1.50,<2",
    "mcp>=1.0,<2",
    "httpx>=0.27,<1",
    "click>=8.1,<9",
    "rich>=13.7,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]

[project.scripts]
modus = "modus.cli:main"

[project.urls]
Homepage = "https://github.com/pb3ck/modus"
Repository = "https://github.com/pb3ck/modus"
Issues = "https://github.com/pb3ck/modus/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modus"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "RUF",   # ruff-specific rules
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "TCH",   # flake8-type-checking
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "z3.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=modus",
    "--cov-report=term-missing",
    "-m",
    "not integration",
]
markers = [
    "integration: opt-in tests that drive a real `quarry mcp` subprocess. Skipped by default; run with `pytest -m integration`.",
]

[tool.coverage.run]
branch = true
source = ["src/modus"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
